--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -8,8 +8,13 @@ on:
   workflow_dispatch:
 
 jobs:
+  test:
+    uses: ./.github/workflows/test.yml
+    secrets: inherit
+
   release:
     runs-on: ubuntu-latest
+    needs: test
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     
     steps:
@@ -42,9 +47,6 @@ jobs:
 
     - name: Install dependencies
       run: flutter pub get
-
-    - name: Run tests
-      run: flutter test
 
     - name: Build generated files
       run: flutter packages pub run build_runner build --delete-conflicting-outputs
