feat: Integrate test workflow and add needs dependency to build
This commit integrates the separate test workflow into the
build-release workflow by calling the `.github/workflows/test.yml`
workflow.  It also adds a `needs: test` dependency to the `build` job,
ensuring that tests pass before the build process starts. This change
enhances the reliability of releases by preventing builds from
proceeding if tests fail.  The dedicated test step within this file was
removed as testing is now handled by the re-usable test workflow.

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -9,8 +9,13 @@ on:
         type: string
 
 jobs:
+  test:
+    uses: ./.github/workflows/test.yml
+    secrets: inherit
+
   build:
     runs-on: ubuntu-latest
+    needs: test
     
     steps:
     - name: Checkout repository
@@ -30,9 +35,6 @@ jobs:
 
     - name: Install dependencies
       run: flutter pub get
-
-    - name: Run tests
-      run: flutter test
 
     - name: Build generated files
       run: flutter packages pub run build_runner build --delete-conflicting-outputs
