--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,45 +8,8 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Setup Java
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'zulu'
-        java-version: '17'
-
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.32.6'
-        channel: 'stable'
-
-    - name: Install dependencies
-      run: flutter pub get
-
-    - name: Verify formatting
-      run: dart format --output=none --set-exit-if-changed .
-
-    - name: Analyze project source
-      run: flutter analyze
-
-    - name: Build generated files
-      run: flutter packages pub run build_runner build --delete-conflicting-outputs
-
-    - name: Run tests
-      run: flutter test --coverage
-
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        file: coverage/lcov.info
-        token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: false
+    uses: ./.github/workflows/test.yml
+    secrets: inherit
 
   build:
     runs-on: ubuntu-latest
