--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Create keystore from secrets
       run: |
         echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
-      if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+      if: ${{ secrets.KEYSTORE_BASE64 }}
 
     - name: Create key.properties
       run: |
@@ -50,7 +50,7 @@ jobs:
         echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
         echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
         echo "storeFile=keystore.jks" >> android/key.properties
-      if: ${{ secrets.STORE_PASSWORD != '' }}
+      if: ${{ secrets.STORE_PASSWORD }}
 
     - name: Build APK (Release)
       run: flutter build apk --release --split-per-abi
@@ -60,7 +60,7 @@ jobs:
 
     - name: Build APK (Debug) - fallback if no signing
       run: flutter build apk --debug
-      if: ${{ secrets.KEYSTORE_BASE64 == '' }}
+      if: ${{ !secrets.KEYSTORE_BASE64 }}
 
     - name: Update version in pubspec.yaml
       run: |
@@ -127,7 +127,7 @@ jobs:
         asset_path: build/app/outputs/flutter-apk/app-release.apk
         asset_name: ussd-emulator-${{ steps.version.outputs.version }}-universal.apk
         asset_content_type: application/vnd.android.package-archive
-      if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+      if: ${{ secrets.KEYSTORE_BASE64 }}
 
     - name: Upload APK (ARM64)
       uses: actions/upload-release-asset@v1
@@ -138,7 +138,7 @@ jobs:
         asset_path: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
         asset_name: ussd-emulator-${{ steps.version.outputs.version }}-arm64.apk
         asset_content_type: application/vnd.android.package-archive
-      if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+      if: ${{ secrets.KEYSTORE_BASE64 }}
 
     - name: Upload APK (ARM)
       uses: actions/upload-release-asset@v1
@@ -149,7 +149,7 @@ jobs:
         asset_path: build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
         asset_name: ussd-emulator-${{ steps.version.outputs.version }}-arm.apk
         asset_content_type: application/vnd.android.package-archive
-      if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+      if: ${{ secrets.KEYSTORE_BASE64 }}
 
     - name: Upload APK (x86_64)
       uses: actions/upload-release-asset@v1
@@ -160,7 +160,7 @@ jobs:
         asset_path: build/app/outputs/flutter-apk/app-x86_64-release.apk
         asset_name: ussd-emulator-${{ steps.version.outputs.version }}-x86_64.apk
         asset_content_type: application/vnd.android.package-archive
-      if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+      if: ${{ secrets.KEYSTORE_BASE64 }}
 
     - name: Upload AAB
       uses: actions/upload-release-asset@v1
@@ -171,7 +171,7 @@ jobs:
         asset_path: build/app/outputs/bundle/release/app-release.aab
         asset_name: ussd-emulator-${{ steps.version.outputs.version }}.aab
         asset_content_type: application/octet-stream
-      if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+      if: ${{ secrets.KEYSTORE_BASE64 }}
 
     - name: Upload Debug APK (fallback)
       uses: actions/upload-release-asset@v1
@@ -182,7 +182,7 @@ jobs:
         asset_path: build/app/outputs/flutter-apk/app-debug.apk
         asset_name: ussd-emulator-${{ steps.version.outputs.version }}-debug.apk
         asset_content_type: application/vnd.android.package-archive
-      if: ${{ secrets.KEYSTORE_BASE64 == '' }}
+      if: ${{ !secrets.KEYSTORE_BASE64 }}
 
     - name: Clean up keystore
       run: rm -f android/app/keystore.jks android/key.properties
