feat: Add local network usage for Flutter debug service
Adds NSLocalNetworkUsageDescription and NSBonjourServices keys to
Info.plist. This allows the app to discover and connect to the
Flutter debug service on the local network via Bonjour, enabling
debugging features.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Required to discover and connect to the Flutter debug service on the local network.</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_dartobservatory._tcp</string>
+	</array>
 </dict>
 </plist>
