--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ develop, feature/* ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master, develop ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -30,6 +30,7 @@ jobs:
       with:
         flutter-version: '3.32.6'
         channel: 'stable'
+        cache: true
 
     - name: Install dependencies
       run: flutter pub get
